[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.8111, 20.3383 )

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="PunchDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 21.1084, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -21.1084, -21.1084 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="PunchDelayTimer" to="." method="_on_PunchDelayTimer_timeout"]
